= CHANGES

== 0.10.2 (Not Yet Released)

* Added support for TravisCI with build configurations
* Fixes issue with reloader and libxml2 [Thanks farcaller]

== 0.10.1

* Added a Mongo store for padrino-cache [Thanks to aliem]
* Adds restful support for parent controller declaration
* Before filters are called regardless of matching
* Fix env['padrino.instance'] where create a loop and is too long to show in Padrino::ShowExceptions.
* Compat with Slim 1.0, Compat with Ruby 1.9.3. FIX #596
* Translation fixes for IT, CS, DE, NL, and more with locale tests
* Fixes for FR, CN and RU locales [Thanks to TweeKane]
* Compatibility with Bundler > 1.0 in Gemfile
* Admin generator properly destroys access control on removal
* Fixes admin generation when used with namespaced models
* Allow logger to be configured before load [Thanks to skade]
* Fix an error message [Thanks mariozig]
* Fix doc bug in logger [Thanks Xylakant]
* Adds host parameter to DM Postgresql Adapter [Thanks to Aigeruth]
* Cleanup models folder in apps that is no longer used by default

== 0.10.0

* Fix `padrino s` shortcut to accept options
* Fix Padrino::Application#run! (now correctly accepts options)
* Fix Padrino::Server (now has correct defaults options)
* Fix Padrino::Reloader with strange constants or paths #565
* Fix Padrino::Reloader reloading also $LOADED_FEATURES deps
* Fix Double loading of boot.rb in rake tasks. #560
* Fix an issue with haml rendering on rubinius
* Fix our tests to meets ruby < 1.9 needs
* Fix issue #556 now we resolve correctly prerequisites of your app
* Enhancement for #556 now is possible to add custom prerequisites to our app
* Change move Padrino.current_controller in public apis
* Enhancement, now Padrino::Reloader works without ActiveSupport::Dependency or with it disabled #567 [Thanks Bernerdschaefer]
* Cleanup padrino-core dependencies now we have less less ActiveSupport dependencies, we are very very thin finally!
* Fix bundler gem dependency mismatch #553