@@ -5,37 +5,37 @@ class Foo
 end
 
 COMMON_TESTS = <<-HERE_DOC
+should "return nil trying to get a value that doesn't exist" do
+  assert_equal nil, Padrino.cache.get(@test_key)
+end
+
 should 'set and get an object' do
-  Padrino.cache.set('val', Foo.new)
-  assert_equal "bar", Padrino.cache.get('val').bar
+  Padrino.cache.set(@test_key, Foo.new)
+  assert_equal "bar", Padrino.cache.get(@test_key).bar
 end
 
 should 'set and get a nil value' do
-  Padrino.cache.set('val', nil)
-  assert_equal nil, Padrino.cache.get('val')
+  Padrino.cache.set(@test_key, nil)
+  assert_equal nil, Padrino.cache.get(@test_key)
 end
 
 should 'set and get a raw value' do
-  Padrino.cache.set('val', 'foo')
-  assert_equal 'foo', Padrino.cache.get('val')
-end
-
-should "return nil trying to get a value that doesn't exist" do
-  assert_equal nil, Padrino.cache.get('test')
+  Padrino.cache.set(@test_key, 'foo')
+  assert_equal 'foo', Padrino.cache.get(@test_key)
 end
 
 should "set a value that expires" do
-  Padrino.cache.set('val', 'test', :expires_in => 1)
-  assert_equal 'test', Padrino.cache.get('val')
+  Padrino.cache.set(@test_key, 'test', :expires_in => 1)
+  assert_equal 'test', Padrino.cache.get(@test_key)
   sleep 2
-  assert_equal nil, Padrino.cache.get('val')
+  assert_equal nil, Padrino.cache.get(@test_key)
 end
 
 should 'delete a value' do
-  Padrino.cache.set('val', 'test')
-  assert_equal 'test', Padrino.cache.get('val')
-  Padrino.cache.delete('val')
-  assert_equal nil, Padrino.cache.get('val')
+  Padrino.cache.set(@test_key, 'test')
+  assert_equal 'test', Padrino.cache.get(@test_key)
+  Padrino.cache.delete(@test_key)
+  assert_equal nil, Padrino.cache.get(@test_key)
 end
 HERE_DOC
 
@@ -69,6 +69,7 @@ begin
     def setup
       Padrino.cache = Padrino::Cache::Store::Memcache.new(::Dalli::Client.new('127.0.0.1:11211', :exception_retry_limit => 1))
       Padrino.cache.flush
+      @test_key = "val_#{Time.now.to_i}"
     end
 
     def teardown
@@ -88,6 +89,7 @@ begin
     def setup
       Padrino.cache = Padrino::Cache::Store::Redis.new(::Redis.new(:host => '127.0.0.1', :port => 6379, :db => 0))
       Padrino.cache.flush
+      @test_key = "val_#{Time.now.to_i}"
     end
 
     def teardown
@@ -107,6 +109,7 @@ begin
     def setup
       Padrino.cache = Padrino::Cache::Store::Mongo.new(::Mongo::Connection.new('127.0.0.1', 27017).db('padrino-cache_test'), {:size => 10, :collection => 'cache'})
       Padrino.cache.flush
+      @test_key = "val_#{Time.now.to_i}"
     end
 
     def teardown
@@ -124,6 +127,7 @@ class TestFileStore < Test::Unit::TestCase
     @apptmp = "#{Dir.tmpdir}/padrino-tests/#{UUID.new.generate}"
     FileUtils.mkdir_p(@apptmp)
     Padrino.cache = Padrino::Cache::Store::File.new(@apptmp)
+    @test_key = "val_#{Time.now.to_i}"
   end
 
   def teardown
@@ -136,6 +140,7 @@ end
 class TestInMemoryStore < Test::Unit::TestCase
   def setup
     Padrino.cache = Padrino::Cache::Store::Memory.new(50)
+    @test_key = "val_#{Time.now.to_i}"
   end
 
   def teardown
