@@ -4,6 +4,7 @@
 
 * Added support for TravisCI with build configurations
 * Fixes issue with reloader and libxml2 [Thanks farcaller]
+* Fixes cache tests so they don't fail on CI
 
 == 0.10.1
 
